Third draft of slide with results. Adjusted configurations for collection of data.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -100,11 +100,12 @@ num-rngs = 3
 **.udpApp[*].destAddresses = "nodeMaster[0]"
 **.udpApp[*].packetName = "UDP" + substringBefore(substringAfter(fullPath(), ".node"), ".udp")
 **.udpApp[*].destPort = 5000
-#**.udpApp[*].messageLength = ${ML = 32, 64, 128, 256, 512}B
-**.udpApp[*].messageLength = ${ML = 128}B
+**.udpApp[*].messageLength = ${ML = 32, 64, 128, 256}B # DemoData
+#**.udpApp[*].messageLength = ${ML = 128}B
 **.udpApp[*].messageLength.param-record-as-scalar = true
-#**.sendInterval = truncnormal(1s, 0.2s)
-**.sendInterval = 1s
+*.dummySend = ${SI=0.25, 0.5, 1} # DemoData
+**.sendInterval = truncnormal(${SI}s, (${SI} * 0.1s)) # DemoData
+#**.sendInterval = 1s
 #**.udpApp[*].startTime = ${SD} * ${NM} * 5ms # Five frames
 **.udpApp[*].startTime = 10s
 **.udpApp[*].stopTime = 20s
@@ -165,30 +166,30 @@ num-rngs = 3
 
 # Results
 #
-#**.lo.**.scalar-recording = false
-#**.arp.**.scalar-recording = false
-#**.arp.**.vector-recording = false
-#**.udp.**.scalar-recording = false
-#**.udp.**.vector-recording = false
-#**.radio.**.scalar-recording = false
-#**.radio.**.vector-recording = false
-#**.radioMedium.**.scalar-recording = false
-#**.radioMedium.**.vector-recording = false
-#
-#**.energyStorage.residualCapacity.vector-recording = true
-#**.udpApp[*].endToEndDelay.scalar-recording = true
-#**.udpApp[*].rcvdPk.vector-recording = true
-#**.udpApp[*].rcvdPk.scalar-recording = true
-#**.udpApp[*].rcvdPk.statistic-recording = true
-#**.udpApp[*].sentPk.vector-recording = true
-#**.udpApp[*].sentPk.scalar-recording = true
-#**.udpApp[*].throughput.scalar-recording = true
-#**.mac."MAC Access Delay".vector-recording = true
+**.lo.**.scalar-recording = false
+**.arp.**.scalar-recording = false
+**.arp.**.vector-recording = false
+**.udp.**.scalar-recording = false
+**.udp.**.vector-recording = false
+**.radio.**.scalar-recording = false
+**.radio.**.vector-recording = false
+**.radioMedium.**.scalar-recording = false
+**.radioMedium.**.vector-recording = false
+
+**.energyStorage.residualCapacity.vector-recording = true
+**.udpApp[*].endToEndDelay.scalar-recording = true
+**.udpApp[*].rcvdPk.vector-recording = true
+**.udpApp[*].rcvdPk.scalar-recording = true
+**.udpApp[*].rcvdPk.statistic-recording = true
+**.udpApp[*].sentPk.vector-recording = true
+**.udpApp[*].sentPk.scalar-recording = true
+**.udpApp[*].throughput.scalar-recording = true
+**.mac."MAC Access Delay".vector-recording = true
 # Everything on
-**.statistic-recording = true
-**.scalar-recording = true
-**.vector-recording = true
-**.result-recording-modes = all
+#**.statistic-recording = true
+#**.scalar-recording = true
+#**.vector-recording = true
+#**.result-recording-modes = all
 
 # Visualization
 # TODO: Examine visualizer documentation further
@@ -250,7 +251,8 @@ sim-time-limit = 250s
 					#									#
 
 [Config EnergyModelling]
-extends = OrbitingGroundStation
+extends = GroundStation
+#extends = OrbitingGroundStation
 
 *.node**.energyStorageType = "IdealEnergyStorage"
 *.node**.radio.energyConsumerType = "StateBasedEnergyConsumer"
@@ -265,6 +267,12 @@ extends = OrbitingGroundStation
 
 *.node**.radio.energyConsumer.transmitterIdlePowerConsumption = 2mW
 *.node**.radio.energyConsumer.transmitterTransmittingPowerConsumption = 100mW
+
+[Config DemoData]
+extends = EnergyModelling
+sim-time-limit = 110s
+**.udpApp[*].startTime = 10s
+**.udpApp[*].stopTime = 110s
 
 					#								#
 					#			APSKRadio			#
