Added configuration for multi-nic & multi-media comms. Not yet operative, route discovery broken.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -6,7 +6,8 @@
 [Config Clusters]
 # TODO: Seperate ini files
 network = Base
-sim-time-limit = 50s
+sim-time-limit = 30s
+result-dir = ./results/multi_testing/
 #sim-time-limit.param-record-as-scalar = true
 
 #repeat = 0
@@ -41,27 +42,27 @@ num-rngs = 3
 **.routingTable.routingFile = ""
 
 # AODVRouting
-**.aodv.askGratuitousRREP = false # see RFC 3561: 6.6.3
-**.aodv.useHelloMessages = false # see RFC 3561: 6.9 # Default false --- An analogue for beacons perhaps ---
-**.aodv.useLocalRepair = false # see RFC 3561: 6.12 --- not implemented yet ---
-**.aodv.udpPort = 654
+#**.aodv.askGratuitousRREP = false # see RFC 3561: 6.6.3
+#**.aodv.useHelloMessages = false # see RFC 3561: 6.9 # Default false --- An analogue for beacons perhaps ---
+#**.aodv.useLocalRepair = false # see RFC 3561: 6.12 --- not implemented yet ---
+#**.aodv.udpPort = 654
 #**.aodv.maxPeriodicJitter = helloInterval * 0.25
 #**.aodv.periodicJitter = uniform(0s, maxPeriodicJitter)
-**.aodv.maxJitter = 5ms # 
+#**.aodv.maxJitter = 5ms # 
 #**.aodv.jitter = uniform(0ms, maxJitter) # jitter for broadcasts
-**.aodv.helloInterval = 1s # every helloInterval seconds a node broadcasts Hello messages (if it is necessary)
-**.aodv.allowedHelloLoss = 2 # allowedHelloLoss * helloInterval is the lifetime value for Hello messages
-**.aodv.activeRouteTimeout = 3s # D:3s
-**.aodv.netDiameter = ${NM} - 1 # D:35 the maximum possible number of hops between two nodes in the network
-**.aodv.nodeTraversalTime = 0.04s # D:0.04s an estimation of the average one-hop traversal time
-**.aodv.rerrRatelimit = 10 # maximum number of RERR messages that the AODV may originate in 1s.
-**.aodv.rreqRetries = 2 # D:2 specifies the number of times AODV will repeat an expanded ring search for a destination
-**.aodv.rreqRatelimit = 10 # maximum number of RREQ messages that the AODV may originate in 1s.
-**.aodv.timeoutBuffer = 2 # D:2  plus time to wait for a delayed RREP (due to congestion)(to omit this buffer set it to 0)
-**.aodv.ttlStart = 2 # specifies the TTL value when initiating a route request
-**.aodv.ttlIncrement = 2 # specifies the value by which the TTL will be incremented each time a RREQ is retransmitted
-**.aodv.ttlThreshold = 7 # the maximum value of TTL over which NET_DIAMETER value will be used to broadcast any RREQ
-**.aodv.localAddTTL = 2 # it is used by the formula which calculates the initial TTL of the RREQ for a local repair
+#**.aodv.helloInterval = 1s # every helloInterval seconds a node broadcasts Hello messages (if it is necessary)
+#**.aodv.allowedHelloLoss = 2 # allowedHelloLoss * helloInterval is the lifetime value for Hello messages
+#**.aodv.activeRouteTimeout = ${art = 0.5 .. 4 step 0.5}s # D:3s
+#**.aodv.netDiameter = ${nd = 0 .. 1 step 1} # D:35 the maximum possible number of hops between two nodes in the network
+#**.aodv.nodeTraversalTime = ${ntt = 0.1 .. 2 step 0.001}s # D:0.04s an estimation of the average one-hop traversal time
+#**.aodv.rerrRatelimit = 10 # maximum number of RERR messages that the AODV may originate in 1s.
+#**.aodv.rreqRetries = 2 # D:2 specifies the number of times AODV will repeat an expanded ring search for a destination
+#**.aodv.rreqRatelimit = 10 # maximum number of RREQ messages that the AODV may originate in 1s.
+#**.aodv.timeoutBuffer = 2 # D:2  plus time to wait for a delayed RREP (due to congestion)(to omit this buffer set it to 0)
+#**.aodv.ttlStart = 2 # specifies the TTL value when initiating a route request
+#**.aodv.ttlIncrement = 2 # specifies the value by which the TTL will be incremented each time a RREQ is retransmitted
+#**.aodv.ttlThreshold = 7 # the maximum value of TTL over which NET_DIAMETER value will be used to broadcast any RREQ
+#**.aodv.localAddTTL = 2 # it is used by the formula which calculates the initial TTL of the RREQ for a local repair
 #**.aodv.myRouteTimeout = 2 * activeRouteTimeout # the value of the lifetime field that a destination node places in RREPs
 #**.aodv.deletePeriod = 5 * max(activeRouteTimeout, helloInterval) # the time after which an expired route is deleted
 #**.aodv.netTraversalTime = 2 * nodeTraversalTime * netDiameter # an estimation of the traversal time for the complete network
@@ -73,19 +74,19 @@ num-rngs = 3
 #
 # TODO: Make better use of iteration variables
 #*.numMasters = ${NM=4..6}
-*.numMasters = ${NM=4}
+*.numMasters = ${NM=1}
 #*.slavesPerMaster = ${SPM=1..3}
-*.slavesPerMaster = ${SPM=2}
+*.slavesPerMaster = ${SPM=1}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
 
 # Medium
 #
 *.radioMediumType = "IdealRadioMedium"
-*.radioMedium.mediumLimitCache.maxTransmissionDuration= 999s
-*.radioMedium.mediumLimitCache.minInterferenceTime = 999s
-*.radioMedium.propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate
-*.radioMedium.**.propagationTime = 0s
+*.radioMedium[*].mediumLimitCache.maxTransmissionDuration= 999s
+*.radioMedium[*].mediumLimitCache.minInterferenceTime = 999s
+*.radioMedium[*].propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate
+*.radioMedium[*].**.propagationTime = 0s
 
 # Application
 #
@@ -100,55 +101,89 @@ num-rngs = 3
 **.udpApp[*].destAddresses = "nodeMaster[0]"
 **.udpApp[*].packetName = "UDP" + substringBefore(substringAfter(fullPath(), ".node"), ".udp")
 **.udpApp[*].destPort = 5000
-**.udpApp[*].messageLength = ${ML = 32, 64, 128, 256}B # DemoData
-#**.udpApp[*].messageLength = ${ML = 128}B
+#**.udpApp[*].messageLength = ${ML = 32, 64, 128, 256}B # DemoData
+**.udpApp[*].messageLength = ${ML = 128}B
 **.udpApp[*].messageLength.param-record-as-scalar = true
-*.dummySend = ${SI=0.25, 0.5, 1} # DemoData
-**.sendInterval = truncnormal(${SI}s, (${SI} * 0.1s)) # DemoData
-#**.sendInterval = 1s
+#*.dummySend = ${SI=0.25, 0.5, 1} # DemoData
+#**.sendInterval = truncnormal(${SI}s, (${SI} * 0.1s)) # DemoData
+**.sendInterval = 1s
 #**.udpApp[*].startTime = ${SD} * ${NM} * 5ms # Five frames
-**.udpApp[*].startTime = 10s
+**.udpApp[*].startTime = 0s
 **.udpApp[*].stopTime = 20s
 **.udpApp[*].stopTime.param-record-as-scalar = true
 
-# NIC 
+*.nodeSlave**numRadios = 2
+*.nodeMaster**numRadios = 2
+# NIC --- S2S---
 #
-*.node**.wlan[*].typename = "WirelessNic"
+*.node**.wlan[0].typename = "WirelessNic"
 # MAC
 #
-*.node**.macType = "CubeMacLayer"
-*.node**.mac.address = "auto"
-*.node**.mac.bitrate = 2Mbps
-#*.node**.mac.slotDuration = ${SD = 10, 25, 50, 75, 100}ms
-*.node**.mac.slotDuration = ${SD = 100}ms
+*.node**.wlan[0].macType = "CubeMacLayer"
+*.node**.wlan[0].mac.address = "auto"
+*.node**.wlan[0].mac.bitrate = 2Mbps
+#*.node**.wlan[0].mac.slotDuration = ${SD = 10, 25, 50, 75, 100}ms
+*.node**.wlan[0].mac.slotDuration = ${SD = 100}ms
 **.mac.slotDuration.param-record-as-scalar = true
-*.node**.mac.headerLength = 10B
-*.node**.mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-*.node**.mac.numSlots = (${NM})+1 # +1 for the uplink slot
+*.node**.wlan[0].mac.headerLength = 10B
+*.node**.wlan[0].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
+*.node**.wlan[0].mac.numSlots = (${NM})+1 # +1 for the uplink slot
 # TODO: Adjust
-*.node**.mac.queueLength = 999
-*.node**.mac.startTime = 0s
-*.node**.mac.slotPadding = ${SD}ms * 0.1
-*.node**.mac.timeoutDuration = ${SD}ms * 0.2
-*.nodeSlave**.mac.isSlave = true # Determines node behaviour mode
-*.nodeSlave**.clusterId = ancestorIndex(2) % ${NM}
-*.nodeMaster**.clusterId = ancestorIndex(2) 
+*.node**.wlan[0].mac.queueLength = 999
+*.node**.wlan[0].mac.startTime = 0s
+*.node**.wlan[0].mac.slotPadding = ${SD}ms * 0.1
+*.node**.wlan[0].mac.timeoutDuration = ${SD}ms * 0.2
+*.nodeSlave**.wlan[0].mac.isSlave = true # Determines node behaviour mode
+*.nodeSlave**.wlan[0].mac.clusterId = ancestorIndex(2) % ${NM}
+*.nodeMaster**.wlan[0].mac.clusterId = ancestorIndex(2) 
 **.mac.clusterId.param-record-as-scalar = true ## Effects all
-*.node**.mac.slavesInCluster = ${SPM} # Used to let Master know how many messages to expect during uplink slot
+*.node**.wlan[0].mac.slavesInCluster = ${SPM} # Used to let Master know how many messages to expect during uplink slot
 
 # Radio
 #
-*.node**.radioType = "IdealRadio"
-*.node**.radio.displayCommunicationRange = false
+*.node**.wlan[0].radioType = "IdealRadio"
+*.node**.wlan[0].radio.radioMediumModule = "radioMedium[0]"
+*.node**.wlan[0].radio.displayCommunicationRange = false
 # --- --- Transmitter / Receiver
-*.node**.radio.transmitter.bitrate = 2Mbps
-*.node**.radio.transmitter.preambleDuration = 0s
-*.node**.radio.transmitter.headerBitLength = 0b
-*.node**.radio.transmitter.detectionRange = 999m
-*.node**.radio.transmitter.interferenceRange = 0m
-*.nodeSlave**.radio.transmitter.communicationRange = 75m
-*.nodeMaster**.radio.transmitter.communicationRange = 225m
-*.node**.radio.receiver.ignoreInterference = true
+*.node**.wlan[0].radio.transmitter.bitrate = 2Mbps
+*.node**.wlan[0].radio.transmitter.preambleDuration = 0s
+*.node**.wlan[0].radio.transmitter.headerBitLength = 0b
+*.node**.wlan[0].radio.transmitter.detectionRange = 999m
+*.node**.wlan[0].radio.transmitter.interferenceRange = 0m
+*.nodeSlave**.wlan[0].radio.transmitter.communicationRange = 75m
+*.nodeMaster**.wlan[0].radio.transmitter.communicationRange = 225m
+*.node**.wlan[0].radio.receiver.ignoreInterference = true
+
+# NIC --- S2G ---
+#
+#
+*.node**.wlan[1].typename = "IdealWirelessNic"
+# MAC
+#
+#*.node**.wlan[1].macType = "IdealMac"
+*.node**.wlan[1].address = "auto"
+*.node**.wlan[1].bitrate = 2Mbps
+*.node**.wlan[1].mtu = 0B # = 0B -> no fragmentation, passed up by I/F
+*.node**.wlan[1].headerLength = 10B
+*.node**.wlan[1].promiscuous = false
+*.node**.wlan[1].fullDuplex = false
+*.node**.wlan[1].useAck = false
+*.node**.wlan[1].ackTimeout = 100ms
+
+# Radio
+# 
+*.node**.wlan[1].radioType = "IdealRadio"
+*.node**.wlan[1].radio.radioMediumModule = "radioMedium[1]"
+*.node**.wlan[1].radio.displayCommunicationRange = false
+# --- --- Transmitter / Receiver
+*.node**.wlan[1].radio.transmitter.bitrate = 2kbps # mtu will be important
+*.node**.wlan[1].radio.transmitter.preambleDuration = 0s
+*.node**.wlan[1].radio.transmitter.headerBitLength = 0b
+*.node**.wlan[1].radio.transmitter.detectionRange = 999m
+*.node**.wlan[1].radio.transmitter.interferenceRange = 0m
+*.nodeSlave**.wlan[1].radio.transmitter.communicationRange = 75m
+*.nodeMaster**.wlan[1].radio.transmitter.communicationRange = 225m
+*.node**.wlan[1].radio.receiver.ignoreInterference = true
 
 # Mobility
 #
@@ -273,6 +308,34 @@ extends = EnergyModelling
 sim-time-limit = 110s
 **.udpApp[*].startTime = 10s
 **.udpApp[*].stopTime = 110s
+
+[Config NarrowBand]
+extends = EnergyModelling
+
+*.node**.radioType = "NarrowbandRadioBase"
+
+*.node**.radio.antennaType = "IsotropicAntenna"
+*.node**.radio.transmitterType = "NarrowbandTransmitterBase"
+*.node**.radio.receiverType = "NarrowbandReceiverBase"
+
+*.node**.radio.carrierFrequency = 2.412GHz 
+*.node**.radio.bandwidth = 4MHz 
+
+*.node**.radio.transmitter.preambleDuration = 0s
+*.node**.radio.transmitter.headerBitLength = 0b
+*.node**.radio.transmitter.bitrate = 2Mbps
+*.node**.radio.transmitter.power = 2mW
+#*.node**.radio.transmitter.carrierFrequency = 2.412GHz 
+#*.node**.radio.transmitter.bandwidth = 4MHz 
+*.node**.radio.transmitter.modulation = "BPSK"
+
+*.node**.radio.receiver.energyDetection = -85dBm 
+*.node**.radio.receiver.sensitivity = -85dBm 
+*.node**.radio.receiver.snirThreshold = 4dB
+#*.node**.radio.receiver.carrierFrequency = 2.412GHz
+#*.node**.radio.receiver.bandwidth = 4MHz 
+*.node**.radio.receiver.errorModelType = "ErrorModelBase"
+*.node**.radio.receiver.modulation = "BPSK"
 
 					#								#
 					#			APSKRadio			#
