--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -6,10 +6,10 @@
 [Config Clusters]
 # TODO: Seperate ini files
 network = Base
-sim-time-limit = 30s
-result-dir = ./results/multi_testing/
+sim-time-limit = 50s
 #sim-time-limit.param-record-as-scalar = true
 
+# TODO: Multiple config runs leading to statistical analysis
 #repeat = 0
 #seed-set = ${runnumber} # this is the default
 
@@ -19,8 +19,46 @@ num-rngs = 3
 **.mobility.rng-0 = 1
 **.wlan[*].mac.rng-0 = 2
 
+# Cluster Numbers
+#
+#*.numMasters = ${NM=4..6}
+*.numMasters = ${NM=4}
+#*.slavesPerMaster = ${SPM=1..3}
+*.slavesPerMaster = ${SPM=2}
+*.numSlaves = ${NS=(${NM})*(${SPM})}
+*.slaveSeperation = ${SS=10deg}
+
+#*.hostType = ${HT = "AODVRouter", "WirelessHost", "AdhocHost", "DYMORouter", "GPSRRouter"}
+#*.hostType = "DYMORouter"
+# Initial Tests (4M x 2S) 220 packets 
+# "AODVRouter": 220 w/ tweaking
+# "WirelessHost": 80 (only one hop)
+# "AdhocHost": 80 (only one hop)
+# "DYMORouter": 0 configuration required
+# "GPSRRouter": 0 configuration required
+
 # Network & Routing
 #
+# -- AODV
+**.aodv.activeRouteTimeout = 3s # D:3s
+**.aodv.netDiameter = 3 # D:35 the maximum possible number of hops between two nodes in the network
+**.aodv.nodeTraversalTime = 0.1s # D:0.04s an estimation of the average one-hop traversal time
+# -- AdHoc
+#wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");  
+# -- DYMO (dymo)
+#wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
+#string dymoType = default("DYMO");
+#**.dymo. 
+# -- GPSR (gpsr)
+#wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
+#string gpsrType = default("GPSR");
+#**.gpsr. =
+# -- OSPF (BGP)
+#hasOSPF = true;
+# -- RIP (BGP)
+# hasRIP = true;
+
+
 # IPv4NetworkLayer
 **.networkLayer.arpType = "GlobalARP"
 **.networkLayer.proxyARP = true
@@ -41,45 +79,6 @@ num-rngs = 3
 **.routingTable.multicastForwarding = false
 **.routingTable.routingFile = ""
 
-# AODVRouting
-#**.aodv.askGratuitousRREP = false # see RFC 3561: 6.6.3
-#**.aodv.useHelloMessages = false # see RFC 3561: 6.9 # Default false --- An analogue for beacons perhaps ---
-#**.aodv.useLocalRepair = false # see RFC 3561: 6.12 --- not implemented yet ---
-#**.aodv.udpPort = 654
-#**.aodv.maxPeriodicJitter = helloInterval * 0.25
-#**.aodv.periodicJitter = uniform(0s, maxPeriodicJitter)
-#**.aodv.maxJitter = 5ms # 
-#**.aodv.jitter = uniform(0ms, maxJitter) # jitter for broadcasts
-#**.aodv.helloInterval = 1s # every helloInterval seconds a node broadcasts Hello messages (if it is necessary)
-#**.aodv.allowedHelloLoss = 2 # allowedHelloLoss * helloInterval is the lifetime value for Hello messages
-#**.aodv.activeRouteTimeout = ${art = 0.5 .. 4 step 0.5}s # D:3s
-#**.aodv.netDiameter = ${nd = 0 .. 1 step 1} # D:35 the maximum possible number of hops between two nodes in the network
-#**.aodv.nodeTraversalTime = ${ntt = 0.1 .. 2 step 0.001}s # D:0.04s an estimation of the average one-hop traversal time
-#**.aodv.rerrRatelimit = 10 # maximum number of RERR messages that the AODV may originate in 1s.
-#**.aodv.rreqRetries = 2 # D:2 specifies the number of times AODV will repeat an expanded ring search for a destination
-#**.aodv.rreqRatelimit = 10 # maximum number of RREQ messages that the AODV may originate in 1s.
-#**.aodv.timeoutBuffer = 2 # D:2  plus time to wait for a delayed RREP (due to congestion)(to omit this buffer set it to 0)
-#**.aodv.ttlStart = 2 # specifies the TTL value when initiating a route request
-#**.aodv.ttlIncrement = 2 # specifies the value by which the TTL will be incremented each time a RREQ is retransmitted
-#**.aodv.ttlThreshold = 7 # the maximum value of TTL over which NET_DIAMETER value will be used to broadcast any RREQ
-#**.aodv.localAddTTL = 2 # it is used by the formula which calculates the initial TTL of the RREQ for a local repair
-#**.aodv.myRouteTimeout = 2 * activeRouteTimeout # the value of the lifetime field that a destination node places in RREPs
-#**.aodv.deletePeriod = 5 * max(activeRouteTimeout, helloInterval) # the time after which an expired route is deleted
-#**.aodv.netTraversalTime = 2 * nodeTraversalTime * netDiameter # an estimation of the traversal time for the complete network
-#**.aodv.blacklistTimeout = rreqRetries * netTraversalTime # the time after which a blacklisted node is removed from the blacklist
-#**.aodv.nextHopWait = nodeTraversalTime + 0.01s # timeout for a RREP-ACK
-#**.aodv.pathDiscoveryTime = 2 * netTraversalTime # buffer timeout for each broadcasted RREQ message
-
-# Cluster Numbers
-#
-# TODO: Make better use of iteration variables
-#*.numMasters = ${NM=4..6}
-*.numMasters = ${NM=1}
-#*.slavesPerMaster = ${SPM=1..3}
-*.slavesPerMaster = ${SPM=1}
-*.numSlaves = ${NS=(${NM})*(${SPM})}
-*.slaveSeperation = ${SS=10deg}
-
 # Medium
 #
 *.radioMediumType = "IdealRadioMedium"
@@ -88,7 +87,7 @@ num-rngs = 3
 *.radioMedium[*].propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate
 *.radioMedium[*].**.propagationTime = 0s
 
-# Application
+# Applications
 #
 *.node**.numUdpApps = 1
 *.nodeMaster[0].udpApp[*].typename = "UDPSink"
@@ -112,8 +111,6 @@ num-rngs = 3
 **.udpApp[*].stopTime = 20s
 **.udpApp[*].stopTime.param-record-as-scalar = true
 
-*.nodeSlave**numRadios = 2
-*.nodeMaster**numRadios = 2
 # NIC --- S2S---
 #
 *.node**.wlan[0].typename = "WirelessNic"
@@ -122,8 +119,8 @@ num-rngs = 3
 *.node**.wlan[0].macType = "CubeMacLayer"
 *.node**.wlan[0].mac.address = "auto"
 *.node**.wlan[0].mac.bitrate = 2Mbps
-#*.node**.wlan[0].mac.slotDuration = ${SD = 10, 25, 50, 75, 100}ms
-*.node**.wlan[0].mac.slotDuration = ${SD = 100}ms
+#*.node**.wlan[0].mac.slotDuration = ${SD = 0.01, 0.025, 0.05, 0.075, 0.1}s
+*.node**.wlan[0].mac.slotDuration = ${SD = 0.1}s
 **.mac.slotDuration.param-record-as-scalar = true
 *.node**.wlan[0].mac.headerLength = 10B
 *.node**.wlan[0].mac.mtu = 0B # = 0B -> no fragmentation, passed up by I/F
@@ -131,8 +128,8 @@ num-rngs = 3
 # TODO: Adjust
 *.node**.wlan[0].mac.queueLength = 999
 *.node**.wlan[0].mac.startTime = 0s
-*.node**.wlan[0].mac.slotPadding = ${SD}ms * 0.1
-*.node**.wlan[0].mac.timeoutDuration = ${SD}ms * 0.2
+*.node**.wlan[0].mac.slotPadding = ${SD}s * 0.1
+*.node**.wlan[0].mac.timeoutDuration = ${SD}s * 0.2
 *.nodeSlave**.wlan[0].mac.isSlave = true # Determines node behaviour mode
 *.nodeSlave**.wlan[0].mac.clusterId = ancestorIndex(2) % ${NM}
 *.nodeMaster**.wlan[0].mac.clusterId = ancestorIndex(2) 
@@ -153,37 +150,6 @@ num-rngs = 3
 *.nodeSlave**.wlan[0].radio.transmitter.communicationRange = 75m
 *.nodeMaster**.wlan[0].radio.transmitter.communicationRange = 225m
 *.node**.wlan[0].radio.receiver.ignoreInterference = true
-
-# NIC --- S2G ---
-#
-#
-*.node**.wlan[1].typename = "IdealWirelessNic"
-# MAC
-#
-#*.node**.wlan[1].macType = "IdealMac"
-*.node**.wlan[1].address = "auto"
-*.node**.wlan[1].bitrate = 2Mbps
-*.node**.wlan[1].mtu = 0B # = 0B -> no fragmentation, passed up by I/F
-*.node**.wlan[1].headerLength = 10B
-*.node**.wlan[1].promiscuous = false
-*.node**.wlan[1].fullDuplex = false
-*.node**.wlan[1].useAck = false
-*.node**.wlan[1].ackTimeout = 100ms
-
-# Radio
-# 
-*.node**.wlan[1].radioType = "IdealRadio"
-*.node**.wlan[1].radio.radioMediumModule = "radioMedium[1]"
-*.node**.wlan[1].radio.displayCommunicationRange = false
-# --- --- Transmitter / Receiver
-*.node**.wlan[1].radio.transmitter.bitrate = 2kbps # mtu will be important
-*.node**.wlan[1].radio.transmitter.preambleDuration = 0s
-*.node**.wlan[1].radio.transmitter.headerBitLength = 0b
-*.node**.wlan[1].radio.transmitter.detectionRange = 999m
-*.node**.wlan[1].radio.transmitter.interferenceRange = 0m
-*.nodeSlave**.wlan[1].radio.transmitter.communicationRange = 75m
-*.nodeMaster**.wlan[1].radio.transmitter.communicationRange = 225m
-*.node**.wlan[1].radio.receiver.ignoreInterference = true
 
 # Mobility
 #
@@ -234,6 +200,47 @@ num-rngs = 3
 #*.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
+					#								#
+					# 			MultiNIC			#
+					#								#
+
+[Config MultiNIC]
+extends = Clusters
+result-dir = ./results/multi_testing/
+
+*.nodeSlave**numRadios = 2
+*.nodeMaster**numRadios = 2
+
+# NIC --- S2G ---
+#
+*.node**.wlan[1].typename = "IdealWirelessNic"
+# MAC
+#
+#*.node**.wlan[1].macType = "IdealMac"
+*.node**.wlan[1].address = "auto"
+*.node**.wlan[1].bitrate = 2Mbps
+*.node**.wlan[1].mtu = 0B # = 0B -> no fragmentation, passed up by I/F
+*.node**.wlan[1].headerLength = 10B
+*.node**.wlan[1].promiscuous = false
+*.node**.wlan[1].fullDuplex = false
+*.node**.wlan[1].useAck = false
+*.node**.wlan[1].ackTimeout = 100ms
+
+# Radio
+# 
+*.node**.wlan[1].radioType = "IdealRadio"
+*.node**.wlan[1].radio.radioMediumModule = "radioMedium[1]"
+*.node**.wlan[1].radio.displayCommunicationRange = false
+# --- --- Transmitter / Receiver
+*.node**.wlan[1].radio.transmitter.bitrate = 2kbps # mtu will be important
+*.node**.wlan[1].radio.transmitter.preambleDuration = 0s
+*.node**.wlan[1].radio.transmitter.headerBitLength = 0b
+*.node**.wlan[1].radio.transmitter.detectionRange = 999m
+*.node**.wlan[1].radio.transmitter.interferenceRange = 0m
+*.nodeSlave**.wlan[1].radio.transmitter.communicationRange = 75m
+*.nodeMaster**.wlan[1].radio.transmitter.communicationRange = 225m
+*.node**.wlan[1].radio.receiver.ignoreInterference = true
+
 					#									#
 					# 			GroundStation			#
 					#									#
@@ -251,8 +258,8 @@ network = GroundStation
 
 **.aodv.activeRouteTimeout = ${ATT=3}s # D:3s
 **.aodv.netDiameter = ${ND=3} # D:35 the maximum possible number of hops between two nodes in the network
-#**.aodv.nodeTraversalTime = ${NTT= 0.114..0.116 step 0.00005}s
-**.aodv.nodeTraversalTime = ${NTT=0.115}s
+#**.aodv.nodeTraversalTime = ${NTT= 0.114..0.116 step 0.00005}s # Last parameter sweep -> 0.015 (for all runs)
+**.aodv.nodeTraversalTime = ${NTT=0.1}s # 
 
 *.nodeGround**.udpApp[0].typename = "UDPSink"
 
@@ -278,8 +285,8 @@ network = GroundStation
 extends = GroundStation
 sim-time-limit = 250s
 **.udpApp[*].stopTime = 200s
-**nodeMaster**.speed = 1.125mps
-**nodeSlave**.speed = 1.5mps
+**nodeMaster**.speed = 1.125mps * 2
+**nodeSlave**.speed = 1.5mps * 2
 
 					#									#
 					#			EnergyModelling			#
