--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -22,43 +22,18 @@ num-rngs = 3
 # Cluster Numbers
 #
 #*.numMasters = ${NM=4..6}
-*.numMasters = ${NM=4}
+*.numMasters = ${NM=1}
 #*.slavesPerMaster = ${SPM=1..3}
-*.slavesPerMaster = ${SPM=2}
+*.slavesPerMaster = ${SPM=1}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
 
-#*.hostType = ${HT = "AODVRouter", "WirelessHost", "AdhocHost", "DYMORouter", "GPSRRouter"}
-#*.hostType = "DYMORouter"
-# Initial Tests (4M x 2S) 220 packets 
-# "AODVRouter": 220 w/ tweaking
-# "WirelessHost": 80 (only one hop)
-# "AdhocHost": 80 (only one hop)
-# "DYMORouter": 0 configuration required
-# "GPSRRouter": 0 configuration required
-
 # Network & Routing
 #
-# -- AODV
+# AODV
 **.aodv.activeRouteTimeout = 3s # D:3s
 **.aodv.netDiameter = 3 # D:35 the maximum possible number of hops between two nodes in the network
 **.aodv.nodeTraversalTime = 0.1s # D:0.04s an estimation of the average one-hop traversal time
-# -- AdHoc
-#wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");  
-# -- DYMO (dymo)
-#wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
-#string dymoType = default("DYMO");
-#**.dymo. 
-# -- GPSR (gpsr)
-#wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
-#string gpsrType = default("GPSR");
-#**.gpsr. =
-# -- OSPF (BGP)
-#hasOSPF = true;
-# -- RIP (BGP)
-# hasRIP = true;
-
-
 # IPv4NetworkLayer
 **.networkLayer.arpType = "GlobalARP"
 **.networkLayer.proxyARP = true
@@ -199,6 +174,56 @@ num-rngs = 3
 #*.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
+
+					#							#
+					# 			DYMO			#
+					#							#
+
+# Probably needs 802.11 NIC - Requires multicast configuration
+[Config DYMO] 
+extends = Clusters
+
+*.hostType = "DYMORouter"
+
+#wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
+#string dymoType = default("DYMO");
+**.dymo.clientAddresses = "10.0.0.0/24 10.10.0.0"  # "10.10.0.0/24 10.20.0.0" 1. DYMO parameter group
+#**.dymo.interfaces =  # "*" string DEFAULT_METRIC_TYPE = default("HOP_COUNT"); -- Appears to be the only metric implemented -- Bitrate?
+**.dymo.activeInterval = 10s # 5s 2. DYMO parameter group
+**.dymo.maxIdleTime = 200s # 200s MAX_IDLETIME
+**.dymo.maxSequenceNumberLifetime = 300s # 300s MAX_SEQNUM_LIFETIME
+**.dymo.routeRREQWaitTime =	2s # 2s ROUTE_RREQ_WAIT_TIME
+**.dymo.rreqHolddownTime = 20s # 10s double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
+**.dymo.maxHopCount	= 20 # 20 3. DYMO parameter group
+**.dymo.discoveryAttemptsMax = 3 # 3 string MAX_METRIC = default(""); double MAXTIME; -- ??
+**.dymo.appendInformation = true # true 4. DYMO parameter group
+**.dymo.bufferSizePackets = -1 # -1 BUFFER_SIZE_PACKETS
+**.dymo.bufferSizeBytes	= -1B # -1B BUFFER_SIZE_BYTES double CONTROL_TRAFFIC_LIMIT
+**.dymo.maxJitter = 10ms # 10ms DYMO extension parameters
+**.dymo.sendIntermediateRREP = true # true	
+**.dymo.minHopLimit	= 5	# 5
+**.dymo.maxHopLimit	= 10 # 10
+
+					#							#
+					# 			GPSR			#
+					#							#
+
+# Probably needs 802.11 NIC - Requires local topology
+[Config GPSR]
+extends = Clusters
+
+**.configurator.config = xml("<config><interface hosts='*' address='10.0.x.x' netmask='255.255.0.0'/></config>")
+
+*.hostType = "GPSRRouter"
+
+#wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
+#string gpsrType = default("GPSR");
+**.gpsr.planarizationMode = 0 # 0 GPSR parameters
+**.gpsr.interfaces = "*" # "*"
+**.gpsr.beaconInterval = 0.6s # 10s
+**.gpsr.maxJitter = 0.01s # 1s
+**.gpsr.neighborValidityInterval = 30s # 30s	
+**.gpsr.positionByteLength = 2 * 4B # 2 * 4B
 
 					#								#
 					# 			MultiNIC			#
