DYMO, using multicast, working with small clusters

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -22,37 +22,33 @@ num-rngs = 3
 # Cluster Numbers
 #
 #*.numMasters = ${NM=4..6}
-*.numMasters = ${NM=1}
+*.numMasters = ${NM=4}
 #*.slavesPerMaster = ${SPM=1..3}
-*.slavesPerMaster = ${SPM=1}
+*.slavesPerMaster = ${SPM=2}
 *.numSlaves = ${NS=(${NM})*(${SPM})}
 *.slaveSeperation = ${SS=10deg}
 
 # Network & Routing
 #
-# AODV
-**.aodv.activeRouteTimeout = 3s # D:3s
-**.aodv.netDiameter = 3 # D:35 the maximum possible number of hops between two nodes in the network
-**.aodv.nodeTraversalTime = 0.1s # D:0.04s an estimation of the average one-hop traversal time
 # IPv4NetworkLayer
 **.networkLayer.arpType = "GlobalARP"
 **.networkLayer.proxyARP = true
 # IPv4NetworkLayer -> IPv4NodeConfigurator
-**.configurator.addStaticRoutes = true
-**.configurator.configureRoutingTable = true
-# IPv4NetworkLayer -> IPv4
-**.networkLayer.ip.procDelay = 0s
-**.networkLayer.ip.timeToLive = 32
-**.networkLayer.ip.multicastTimeToLive = 32 
-**.networkLayer.ip.fragmentTimeout = 60s
-**.networkLayer.ip.forceBroadcast = false
-**.networkLayer.ip.useProxyARP = true
-# IPv4RoutingTable
-**.routingTable.routerId = "auto"
-**.routingTable.netmaskRoutes = "*"
-**.routingTable.forwarding = true
-**.routingTable.multicastForwarding = false
-**.routingTable.routingFile = ""
+#**.configurator.addStaticRoutes = true
+#**.configurator.configureRoutingTable = true
+## IPv4NetworkLayer -> IPv4
+#**.networkLayer.ip.procDelay = 0s
+#**.networkLayer.ip.timeToLive = 32
+#**.networkLayer.ip.multicastTimeToLive = 32 
+#**.networkLayer.ip.fragmentTimeout = 60s
+#**.networkLayer.ip.forceBroadcast = false
+#**.networkLayer.ip.useProxyARP = true
+## IPv4RoutingTable
+#**.routingTable.routerId = "auto"
+#**.routingTable.netmaskRoutes = "*"
+#**.routingTable.forwarding = true
+#**.routingTable.multicastForwarding = false
+#**.routingTable.routingFile = ""
 
 # Medium
 #
@@ -81,7 +77,6 @@ num-rngs = 3
 #*.dummySend = ${SI=0.25, 0.5, 1} # DemoData
 #**.sendInterval = truncnormal(${SI}s, (${SI} * 0.1s)) # DemoData
 **.sendInterval = 1s
-#**.udpApp[*].startTime = ${SD} * ${NM} * 5ms # Five frames
 **.udpApp[*].startTime = 0s
 **.udpApp[*].stopTime = 20s
 **.udpApp[*].stopTime.param-record-as-scalar = true
@@ -111,7 +106,8 @@ num-rngs = 3
 **.mac.clusterId.param-record-as-scalar = true ## Effects all
 *.node**.wlan[0].mac.slavesInCluster = ${SPM} # Used to let Master know how many messages to expect during uplink slot
 
-# Radio
+# TODO: Investiage channels
+# Radio 
 #
 *.node**.wlan[0].radioType = "IdealRadio"
 *.node**.wlan[0].radio.radioMediumModule = "radioMedium[0]"
@@ -179,17 +175,37 @@ num-rngs = 3
 					# 			DYMO			#
 					#							#
 
-# Probably needs 802.11 NIC - Requires multicast configuration
 [Config DYMO] 
 extends = Clusters
+
+**.configurator.config = xmldoc("DYMOConfig.xml")
+**.configurator.assignDisjunctSubnetAddresses = false
+**.configurator.addStaticRoutes = false
+**.configurator.addSubnetRoutes = false
+**.configurator.addDefaultRoutes = false
+**.configurator.optimizeRoutes = false
+**.configurator.dumpAddresses = true
+**.configurator.dumpRoutes = true
+
+#**.udpApp[0].localPort = 100
+#**.udpApp[0].destPort = 100
+**.udpApp[*].joinLocalMulticastGroups = true
+
+**.multicastForwarding = true
+**.networkLayer.igmp.queryInterval = 60s
+
+**.igmpType = "IGMPv2"
+#**.igmpType = "IGMPv3"
 
 *.hostType = "DYMORouter"
 
 #wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
 #string dymoType = default("DYMO");
+
 **.dymo.clientAddresses = "10.0.0.0/24 10.10.0.0"  # "10.10.0.0/24 10.20.0.0" 1. DYMO parameter group
 #**.dymo.interfaces =  # "*" string DEFAULT_METRIC_TYPE = default("HOP_COUNT"); -- Appears to be the only metric implemented -- Bitrate?
 **.dymo.activeInterval = 10s # 5s 2. DYMO parameter group
+**.dymo.useMulticastRREP = false
 **.dymo.maxIdleTime = 200s # 200s MAX_IDLETIME
 **.dymo.maxSequenceNumberLifetime = 300s # 300s MAX_SEQNUM_LIFETIME
 **.dymo.routeRREQWaitTime =	2s # 2s ROUTE_RREQ_WAIT_TIME
@@ -200,37 +216,18 @@ extends = Clusters
 **.dymo.bufferSizePackets = -1 # -1 BUFFER_SIZE_PACKETS
 **.dymo.bufferSizeBytes	= -1B # -1B BUFFER_SIZE_BYTES double CONTROL_TRAFFIC_LIMIT
 **.dymo.maxJitter = 10ms # 10ms DYMO extension parameters
-**.dymo.sendIntermediateRREP = true # true	
+**.dymo.sendIntermediateRREP = true # true
 **.dymo.minHopLimit	= 5	# 5
 **.dymo.maxHopLimit	= 10 # 10
-
-					#							#
-					# 			GPSR			#
-					#							#
-
-# Probably needs 802.11 NIC - Requires local topology
-[Config GPSR]
-extends = Clusters
-
-**.configurator.config = xml("<config><interface hosts='*' address='10.0.x.x' netmask='255.255.0.0'/></config>")
-
-*.hostType = "GPSRRouter"
-
-#wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
-#string gpsrType = default("GPSR");
-**.gpsr.planarizationMode = 0 # 0 GPSR parameters
-**.gpsr.interfaces = "*" # "*"
-**.gpsr.beaconInterval = 0.6s # 10s
-**.gpsr.maxJitter = 0.01s # 1s
-**.gpsr.neighborValidityInterval = 30s # 30s	
-**.gpsr.positionByteLength = 2 * 4B # 2 * 4B
 
 					#								#
 					# 			MultiNIC			#
 					#								#
-
+#
+# Work In Progress
+#
 [Config MultiNIC]
-extends = Clusters
+extends = DYMO
 result-dir = ./results/multi_testing/
 
 *.nodeSlave**numRadios = 2
@@ -271,7 +268,8 @@ result-dir = ./results/multi_testing/
 					#									#
 
 [Config GroundStation]
-extends = Clusters
+#extends = Clusters
+extends = DYMO
 network = GroundStation
 
 *.numGround = 1
@@ -306,6 +304,7 @@ network = GroundStation
 					#			OrbitingGroundStation			#
 					#											#
 
+# TODO: AODV should use hello messages while nodes orbit
 [Config OrbitingGroundStation]
 extends = GroundStation
 sim-time-limit = 250s
