Minor simulation changes. Refactoring and tinkering. Issues with DYMO still persist.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -6,7 +6,7 @@
 [Config Clusters]
 # TODO: Seperate ini files
 network = Base
-sim-time-limit = 50s
+sim-time-limit = 200s
 #sim-time-limit.param-record-as-scalar = true
 
 # TODO: Multiple config runs leading to statistical analysis
@@ -53,6 +53,9 @@ num-rngs = 3
 # Medium
 #
 *.radioMediumType = "IdealRadioMedium"
+*.radioMedium[*].rangeFilter = "communicationRange"
+#*.radioMedium[*].radioModeFilter = true
+#*.radioMedium[*].listeningFilter = true
 *.radioMedium[*].mediumLimitCache.maxTransmissionDuration= 999s
 *.radioMedium[*].mediumLimitCache.minInterferenceTime = 999s
 *.radioMedium[*].propagationType = "ConstantTimePropagation" # Doesn't affect transmission durations which is bits/bitrate
@@ -76,9 +79,9 @@ num-rngs = 3
 **.udpApp[*].messageLength.param-record-as-scalar = true
 #*.dummySend = ${SI=0.25, 0.5, 1} # DemoData
 #**.sendInterval = truncnormal(${SI}s, (${SI} * 0.1s)) # DemoData
-**.sendInterval = 1s
-**.udpApp[*].startTime = 0s
-**.udpApp[*].stopTime = 20s
+**.sendInterval = 10s
+**.udpApp[*].startTime = 0s 
+**.udpApp[*].stopTime = 100s
 **.udpApp[*].stopTime.param-record-as-scalar = true
 
 # NIC --- S2S---
@@ -110,8 +113,9 @@ num-rngs = 3
 # Radio 
 #
 *.node**.wlan[0].radioType = "IdealRadio"
+# TODO: May be messing up obstacle ...
 *.node**.wlan[0].radio.radioMediumModule = "radioMedium[0]"
-*.node**.wlan[0].radio.displayCommunicationRange = false
+*.node**.wlan[0].radio.displayCommunicationRange = true
 # --- --- Transmitter / Receiver
 *.node**.wlan[0].radio.transmitter.bitrate = 2Mbps
 *.node**.wlan[0].radio.transmitter.preambleDuration = 0s
@@ -128,7 +132,7 @@ num-rngs = 3
 *.nodeMaster[*].mobilityType = "CircleMobility"
 *.node**.cx = 500m
 *.node**.cy = 500m
-*.node**.cz = 1.0m
+*.node**.cz = 0.0m
 *.nodeMaster**.r = 150m
 *.nodeMaster**.startAngle = parentIndex() * (360deg/${NM})
 # --- Slaves
@@ -167,7 +171,7 @@ num-rngs = 3
 # TODO: Examine visualizer documentation further
 #
 #*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
-#*.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
+*.visualizer.dataLinkVisualizer.packetNameFilter = "UDP*"
 #*.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
@@ -177,6 +181,9 @@ num-rngs = 3
 
 [Config DYMO] 
 extends = Clusters
+
+# Shouldn't be necessary
+**.displayCommunicationRange = true
 
 **.configurator.config = xmldoc("DYMOConfig.xml")
 **.configurator.assignDisjunctSubnetAddresses = false
@@ -202,15 +209,21 @@ extends = Clusters
 #wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
 #string dymoType = default("DYMO");
 
-**.dymo.clientAddresses = "10.0.0.0/24 10.10.0.0"  # "10.10.0.0/24 10.20.0.0" 1. DYMO parameter group
+**.dymo.clientAddresses = "" # "10.0.0.0/24 10.10.0.0"  # "10.10.0.0/24 10.20.0.0" 1. DYMO parameter group
 #**.dymo.interfaces =  # "*" string DEFAULT_METRIC_TYPE = default("HOP_COUNT"); -- Appears to be the only metric implemented -- Bitrate?
-**.dymo.activeInterval = 10s # 5s 2. DYMO parameter group
+**.dymo.activeInterval = 5s # 5s 2. DYMO parameter group
 **.dymo.useMulticastRREP = false
 **.dymo.maxIdleTime = 200s # 200s MAX_IDLETIME
 **.dymo.maxSequenceNumberLifetime = 300s # 300s MAX_SEQNUM_LIFETIME
-**.dymo.routeRREQWaitTime =	2s # 2s ROUTE_RREQ_WAIT_TIME
-**.dymo.rreqHolddownTime = 20s # 10s double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
-**.dymo.maxHopCount	= 20 # 20 3. DYMO parameter group
+
+# "not received within RREQ_WAIT_TIME, RREQ_Gen may retry the Route Discovery by generating another RREQ."
+**.dymo.routeRREQWaitTime =	10s # 2s ROUTE_RREQ_WAIT_TIME
+
+**.dymo.rreqHolddownTime = 10s # 10s double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
+
+# Only works for 4 and 5. Only getting 60 packets to ground in either case.
+**.dymo.maxHopCount	= 20 # 20 3. DYMO parameter group #
+
 **.dymo.discoveryAttemptsMax = 3 # 3 string MAX_METRIC = default(""); double MAXTIME; -- ??
 **.dymo.appendInformation = true # true 4. DYMO parameter group
 **.dymo.bufferSizePackets = -1 # -1 BUFFER_SIZE_PACKETS
@@ -219,6 +232,51 @@ extends = Clusters
 **.dymo.sendIntermediateRREP = true # true
 **.dymo.minHopLimit	= 5	# 5
 **.dymo.maxHopLimit	= 10 # 10
+
+					#									#
+					# 			GroundStation			#
+					#									#
+
+[Config GroundStation]
+#extends = Clusters
+extends = DYMO
+network = GroundStation
+result-dir = ./results/ground_testing/
+
+*.numGround = 1
+
+# Obstacles
+# TODO: Check further params
+*.physicalEnvironment.config = xmldoc("walls.xml")
+*.radioMedium[*].obstacleLossType = "IdealObstacleLoss"
+
+*.nodeGround**.udpApp[0].typename = "UDPSink"
+
+**.udpApp[*].typename = "UDPBasicApp"
+**.udpApp[*].destAddresses = "nodeGround[0]"
+
+# Slots  0 .. NM-1
+**.mac.numSlots = ${NM} + 2 # +1 for ground (acting like an extra master)
+
+*.nodeGround**.mac.clusterId = ${NM} # 0..3 for masters 4 for ground 5 for slave uplink
+
+*.nodeGround**.radio.transmitter.communicationRange = 75m
+
+*.nodeGround**mobilityType = "CircleMobility"
+*.nodeGround**.r = 85m
+*.nodeGround**.startAngle = 0deg
+
+					#											#
+					#			OrbitingGroundStation			#
+					#											#
+
+# TODO: AODV should use hello messages while nodes orbit
+[Config OrbitingGroundStation]
+extends = GroundStation
+sim-time-limit = 250s
+**.udpApp[*].stopTime = 200s
+**nodeMaster**.speed = 1.125mps * 2
+**nodeSlave**.speed = 1.5mps * 2
 
 					#								#
 					# 			MultiNIC			#
@@ -252,7 +310,7 @@ result-dir = ./results/multi_testing/
 # 
 *.node**.wlan[1].radioType = "IdealRadio"
 *.node**.wlan[1].radio.radioMediumModule = "radioMedium[1]"
-*.node**.wlan[1].radio.displayCommunicationRange = false
+*.node**.wlan[1].radio.displayCommunicationRange = true
 # --- --- Transmitter / Receiver
 *.node**.wlan[1].radio.transmitter.bitrate = 2kbps # mtu will be important
 *.node**.wlan[1].radio.transmitter.preambleDuration = 0s
@@ -262,55 +320,6 @@ result-dir = ./results/multi_testing/
 *.nodeSlave**.wlan[1].radio.transmitter.communicationRange = 75m
 *.nodeMaster**.wlan[1].radio.transmitter.communicationRange = 225m
 *.node**.wlan[1].radio.receiver.ignoreInterference = true
-
-					#									#
-					# 			GroundStation			#
-					#									#
-
-[Config GroundStation]
-#extends = Clusters
-extends = DYMO
-network = GroundStation
-
-*.numGround = 1
-
-# Obstacles
-# TODO: Check further params
-*.physicalEnvironment.config = xmldoc("walls.xml")
-*.radioMedium.obstacleLossType = "IdealObstacleLoss"
-
-**.aodv.activeRouteTimeout = ${ATT=3}s # D:3s
-**.aodv.netDiameter = ${ND=3} # D:35 the maximum possible number of hops between two nodes in the network
-#**.aodv.nodeTraversalTime = ${NTT= 0.114..0.116 step 0.00005}s # Last parameter sweep -> 0.015 (for all runs)
-**.aodv.nodeTraversalTime = ${NTT=0.1}s # 
-
-*.nodeGround**.udpApp[0].typename = "UDPSink"
-
-**.udpApp[*].typename = "UDPBasicApp"
-**.udpApp[*].destAddresses = "nodeGround[0]"
-
-# Slots  0 .. NM-1
-**.mac.numSlots = ${NM} + 2 # +1 for ground (acting like an extra master)
-
-*.nodeGround**.mac.clusterId = ${NM} # 0..3 for masters 4 for ground 5 for slave uplink
-
-*.nodeGround**.radio.transmitter.communicationRange = 75m
-
-*.nodeGround**mobilityType = "CircleMobility"
-*.nodeGround**.r = 85m
-*.nodeGround**.startAngle = 0deg
-
-					#											#
-					#			OrbitingGroundStation			#
-					#											#
-
-# TODO: AODV should use hello messages while nodes orbit
-[Config OrbitingGroundStation]
-extends = GroundStation
-sim-time-limit = 250s
-**.udpApp[*].stopTime = 200s
-**nodeMaster**.speed = 1.125mps * 2
-**nodeSlave**.speed = 1.5mps * 2
 
 					#									#
 					#			EnergyModelling			#
@@ -339,6 +348,10 @@ extends = EnergyModelling
 sim-time-limit = 110s
 **.udpApp[*].startTime = 10s
 **.udpApp[*].stopTime = 110s
+
+					#								#
+					#			NarrowBand			#
+					#								#
 
 [Config NarrowBand]
 extends = EnergyModelling
@@ -375,6 +388,8 @@ extends = EnergyModelling
 # Currently not allowing 'simultaneous' reception
 [Config APSKRadio]
 extends = EnergyModelling
+
+# Apply to all media
 
 *.radioMediumType = "APSKScalarRadioMedium"
 *.radioMedium.backgroundNoise.power = -110dBm
