Adjust DYMO to not forward RteMsgs when originator matches recipient. Heavily commented DYMO source, identified holes and potential flaws.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -198,7 +198,7 @@ extends = Clusters
 #**.udpApp[0].destPort = 100
 **.udpApp[*].joinLocalMulticastGroups = true
 
-**.multicastForwarding = true
+**.multicastForwarding = false
 **.networkLayer.igmp.queryInterval = 60s
 
 **.igmpType = "IGMPv2"
@@ -209,11 +209,15 @@ extends = Clusters
 #wlan[*].mgmtType = default("Ieee80211MgmtAdhoc");
 #string dymoType = default("DYMO");
 
-**.dymo.clientAddresses = "" # "10.0.0.0/24 10.10.0.0"  # "10.10.0.0/24 10.20.0.0" 1. DYMO parameter group
+# Router is always its own client
+**.dymo.clientAddresses = "" # "10.0.0.0/24 10.10.0.0"  # 1. DYMO parameter group
 #**.dymo.interfaces =  # "*" string DEFAULT_METRIC_TYPE = default("HOP_COUNT"); -- Appears to be the only metric implemented -- Bitrate?
 **.dymo.activeInterval = 5s # 5s 2. DYMO parameter group
+
+# NB: Equivalent to broadcasting RREP back to originators
 **.dymo.useMulticastRREP = false
 **.dymo.maxIdleTime = 200s # 200s MAX_IDLETIME
+# Used to calculate default route expiration times
 **.dymo.maxSequenceNumberLifetime = 300s # 300s MAX_SEQNUM_LIFETIME
 
 # "not received within RREQ_WAIT_TIME, RREQ_Gen may retry the Route Discovery by generating another RREQ."
@@ -221,14 +225,14 @@ extends = Clusters
 
 **.dymo.rreqHolddownTime = 10s # 10s double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
 
-# Only works for 4 and 5. Only getting 60 packets to ground in either case.
+# Param sweep: Only works for 4 and 5. Only getting 60 packets to ground in either case.
 **.dymo.maxHopCount	= 20 # 20 3. DYMO parameter group #
 
-**.dymo.discoveryAttemptsMax = 3 # 3 string MAX_METRIC = default(""); double MAXTIME; -- ??
-**.dymo.appendInformation = true # true 4. DYMO parameter group
+**.dymo.discoveryAttemptsMax = 3 # 3 string MAX_METRIC = default(""); double MAXTIME;
+**.dymo.appendInformation = true # true 4. DYMO parameter group - *See DYMO.msg: AddressBlock addedNode[];
 **.dymo.bufferSizePackets = -1 # -1 BUFFER_SIZE_PACKETS
 **.dymo.bufferSizeBytes	= -1B # -1B BUFFER_SIZE_BYTES double CONTROL_TRAFFIC_LIMIT
-**.dymo.maxJitter = 10ms # 10ms DYMO extension parameters
+**.dymo.maxJitter = 10ms # 10ms DYMO extension parameters - *Sampling uniform to get send delay for RteMsgs
 **.dymo.sendIntermediateRREP = true # true
 **.dymo.minHopLimit	= 5	# 5
 **.dymo.maxHopLimit	= 10 # 10
