Improved DYMO, now working with standard ground station setup. Implemented basic intermediate RREP and fixed logic which forwarded unnecessary packets.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -171,7 +171,8 @@ num-rngs = 3
 # TODO: Examine visualizer documentation further
 #
 #*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
-*.visualizer.dataLinkVisualizer.packetNameFilter = "UDP*"
+#*.visualizer.dataLinkVisualizer.packetNameFilter = "UDP*"
+*.visualizer.**.packetNameFilter = "RR*"
 #*.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
 #*.visualizer.mobilityVisualizer.displayMovementTrail = true
 
@@ -181,9 +182,6 @@ num-rngs = 3
 
 [Config DYMO] 
 extends = Clusters
-
-# Shouldn't be necessary
-**.displayCommunicationRange = true
 
 **.configurator.config = xmldoc("DYMOConfig.xml")
 **.configurator.assignDisjunctSubnetAddresses = false
@@ -211,7 +209,7 @@ extends = Clusters
 
 # Router is always its own client
 **.dymo.clientAddresses = "" # "10.0.0.0/24 10.10.0.0"  # 1. DYMO parameter group
-#**.dymo.interfaces =  # "*" string DEFAULT_METRIC_TYPE = default("HOP_COUNT"); -- Appears to be the only metric implemented -- Bitrate?
+#**.dymo.interfaces =  # "*" string DEFAULT_METRIC_TYPE = default("HOP_COUNT"); 
 **.dymo.activeInterval = 5s # 5s 2. DYMO parameter group
 
 # NB: Equivalent to broadcasting RREP back to originators
